Changes to licensing in readme

--- a/README
+++ b/README
@@ -1,6 +1,10 @@
 OpenSCAD Libraries
 © 2012 by William Gibson
-All rights reserved, unless a dependency claims a license which prevents that.
+All rights reserved, unless a library or dependency claims a license which prevents that.
+
 
 Contains OpenSCAD libraries I have written, plus their dependencies.
 http://www.openscad.org/
+
+If you want to use a library from this repo, please contact me at william.gibson.wg@gmail.com
+I would be happy to allow it, including for commercial use, so long as I am informed.
