--- a/README
+++ b/README
@@ -2,8 +2,7 @@
 Modified auger() function, edge can be adjusted by changing the edgeMidPoint var from 0 to 1
 
 
-![alt text](screenshot.png.png "Logo Title Text 1")
-
+![screenshot](screenshot.png)
 
 
 
